--- a/index.html
+++ b/index.html
@@ -10,36 +10,53 @@
 
 <header>
     <h1>Certified Template</h1>
+    <h2>Create a Certification Page with options of your choosing</h2>
 </header>
 
 <div id="Web">
 
 <section class="Certification-Menu" id="">
     <h2>Certification Menu</h2>
-    <h3>Put your name here</h3>
+    <h3>Type a name here</h3>
 
-    <h3>Certification Options</h3>
-
-    <form action="" id="">
+    <form action="" id="Option-Form">
     
-        <input type="text" name="name" id="name" placeholder="Your name here">
+        <input type="text" name="name" id="name" placeholder="Name here">
 
-        <select name="type" id="type">
-            <option value="A">A</option>
-            <option value="B">B</option>
-            <option value="C">C</option>
+        <h3>Certification Options</h3>
+
+        <select name="option" id="option">
+            <option value="A" id="A">A</option>
+            <option value="B" id="B">B</option>
+            <option value="C" id="C">C</option>
         </select>
 
-        <input type="submit" value="Generate your certification paper">
+        <h3>Generate your certification paper here</h3>
+        <input type="submit" value="Generate" onclick="">
 
     </form>
 
 </section>
 
-<section class="Certification-Paper" id="">
-    <h2>Your certification paper will be here after you generate</h2>
+<section class="Certification-Generated" id="">
+
+    <h2>Your certification paper will be here after you generate your choices</h2>
+
+    <section class="Certification-Paper" id="Certification-Paper">
+        <span id="Certification-Present">Certification of "BANK" presented to</span>
+        <span id="Certification-Name">Your Name Here</span>
+        <span id="Certification-Details">Certification Details</span>
+        <img id="Certification-Icon" src="" alt="">
+        <span id="Certification-Owner">Owner</span>
+        <span id="Certification-Date">Date</span>
+    </section>
+
 </section>
 
 </div>
+
+<footer>
+    
+</footer>
 
 </body>
