--- a/index.html
+++ b/index.html
@@ -1,62 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Certifications</title>
     <link rel="stylesheet" href="style.css">
-    <script src ="script.js"></script>
+    <script src="script.js"></script>
 </head>
+
 <body>
 
-<header>
-    <h1>Certified Template</h1>
-    <h2>Create a Certification Page with options of your choosing</h2>
-</header>
+    <header>
+        <h1>Certified Template</h1>
+        <h2>Create a Certification Page with options of your choosing</h2>
+    </header>
 
-<div id="Web">
+    <div id="Web">
 
-<section class="Certification-Menu" id="">
-    <h2>Certification Menu</h2>
-    <h3>Type a name here</h3>
+        <section class="Certification-Menu" id="">
+            <h2>Certification Menu</h2>
+            <h3>Type a name here</h3>
 
-    <form action="" id="Option-Form">
-    
-        <input type="text" name="name" id="name" placeholder="Name here">
+            <form action="" id="Option-Form">
 
-        <h3>Certification Options</h3>
+                <input type="text" name="name" id="name" placeholder="Name here">
 
-        <select name="option" id="option">
-            <option value="A" id="A">A</option>
-            <option value="B" id="B">B</option>
-            <option value="C" id="C">C</option>
-        </select>
+                <h3>Certification Options</h3>
 
-        <h3>Generate your certification paper here</h3>
-        <input type="submit" value="Generate" onclick="">
+                <select name="option" id="option">
+                    <option value="X" id="X">Choose a Certication</option>
+                    <option value="A" id="A">A</option>
+                    <option value="B" id="B">B</option>
+                    <option value="C" id="C">C</option>
+                </select>
 
-    </form>
+                <h3>Generate your certification paper here</h3>
+                <input type="submit" value="Generate" onclick="">
 
-</section>
+            </form>
 
-<section class="Certification-Generated" id="">
+        </section>
 
-    <h2>Your certification paper will be here after you generate your choices</h2>
+        <section class="Certification-Generated" id="">
 
-    <section class="Certification-Paper" id="Certification-Paper">
-        <span id="Certification-Present">Certification of "BANK" presented to</span>
-        <span id="Certification-Name">Your Name Here</span>
-        <span id="Certification-Details">Certification Details</span>
-        <img id="Certification-Icon" src="" alt="">
-        <span id="Certification-Owner">Owner</span>
-        <span id="Certification-Date">Date</span>
-    </section>
+            <h2>Your certification paper will be here after you generate your choices</h2>
 
-</section>
+            <section class="Certification-Paper" id="Certification-Paper">
+                    <span class="" id="Certification-Present">Certification of "BANK" presented to</span>
+                    <span id="Certification-Name">Your Name Here</span>
+                    <span id="Certification-Details">Certification Details</span>
+                    <img id="Certification-Icon" src="" alt="">
+                    <span id="Certification-Owner">Owner</span>
+                    <span id="Certification-Date">Date</span>
+            </section>
 
-</div>
+        </section>
 
-<footer>
-    
-</footer>
+    </div>
+
+    <footer>
+
+    </footer>
 
 </body>
