--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <body>
 
-    <header>
+    <header id="header">
         <h1>Certified Template</h1>
         <h2>Create a Certification Page with options of your choosing</h2>
     </header>
 
     <div id="Web">
 
-        <section class="Certification-Menu" id="">
+        <section class="Certification-Menu" id="menu">
             <h2>Certification Menu</h2>
             <h3>Type a name here</h3>
 
@@ -43,7 +43,7 @@
 
         <section class="Certification-Generated" id="">
 
-            <h2>Your certification paper will be here after you generate your choices</h2>
+            <h2 id="Generated-Text">Your certification paper will be here after you generate your choices (Press CTRL P to print)</h2>
 
             <section class="Certification-Paper" id="Certification-Paper">
                     <span class="" id="Certification-Present">Certification of "BANK" presented to</span>
